made some major update

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,12 @@
+
 spring.application.name=URLShortenerService
-spring.port=$[PORT:8080]
-spring.data.mongodb.uri=mongodb+srv://divyanshubisht1624:M3W93Yr5XQ-n7i#@cluster0.lrjfjj5.mongodb.net/?appName=Cluster0
+
+# Render / Local port handling
+server.port=${PORT:8080}
+
+# MongoDB Atlas (use ENV variable on Render)
+spring.data.mongodb.uri=${SPRING_DATA_MONGODB_URI}
 spring.data.mongodb.database=url_shortener_db
+
+# Optional but useful
 spring.data.mongodb.auto-index-creation=true
