Fix MongoDB env config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,8 @@ spring.application.name=URLShortenerService
 # Render / Local port handling
 server.port=${PORT:8080}
 
-# MongoDB Atlas (use ENV variable on Render)
+# MongoDB Atlas (ENV variable)
 spring.data.mongodb.uri=${SPRING_DATA_MONGODB_URI}
 spring.data.mongodb.database=url_shortener_db
 
-# Optional but useful
 spring.data.mongodb.auto-index-creation=true
